--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "jest",
     "start": "node server.js",
+    "test": "jest",
     "dev": "nodemon server.js"
   },
   "repository": {
@@ -28,6 +28,7 @@
     "express-session": "^1.17.2",
     "jest": "^27.3.1",
     "mysql2": "^2.3.2",
+    "node": "^17.0.1",
     "nodemon": "^2.0.14",
     "sequelize": "^6.8.0"
   }
